chore: fix spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,7 @@
 
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
+  --primary: oklch(0.89 0.13 95.7);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --border: oklch(0.922 0 0);
@@ -56,6 +57,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
   --color-border: var(--border);
